# Elemental_Brawler

./: .gitignore  CMakeLists.txt  Entity.cpp  GameManager.cpp  GameManager.h  main.cpp
src/: main.cpp
src/core/: GameManager.cpp  GameManager.h
src/entities/: Entity.cpp  Entity.h  FighterBall.cpp  FighterBall.h
